General Adjustments plus Added Bitcoin ATM Section

--- a/Loans.html
+++ b/Loans.html
@@ -81,7 +81,7 @@
           </div>
           <div class="col-md-6">
             <h3 class="mb-3">Get the funds you need</h3>
-            <p class="mb-4"> Through our Cash Advance program Midland offers businesses quick and easy access to the capital they need to take their business to the next level. Invest in new equipment or in modernizing the look and feal of your business. the possibilities are endless.&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</p>
+            <p class="mb-4"> Through our Cash Advance program Midland offers businesses quick and easy access to the capital they need to take their business to the next level. Invest in new equipment or in modernizing the look and feal of your business. the possibilities are endless.</p>
             <p class="mb-4">Contact us today to get founding as soon as 48 hours! </p>
           </div>
         </div>
