--- a/POS.html
+++ b/POS.html
@@ -65,7 +65,7 @@
         <div class="row vh-50">
           <div class="col-sm-12 col-md-5 align-self-center">
             <h1 class="jumbotron-heading text-white">Advanced Point of Sale</h1>
-            <p class="text-white-50">Start managing all aspects of your business be it table managment, payroll or
+            <p class="text-white-50">Start managing all aspects of your business be it table management, payroll or
               inventory with a modern point of sale system.</p>
           </div>
         </div>
@@ -99,8 +99,8 @@
             <p class="mb-4">
               We go the extra mile by providing, 24/7 phone support, on-site support and consulting. During installation
               we work with management to train staff for a smooth transition to our point of sales solutions. It doesn't
-              just end there though we want our customers to suceeed and benifit from our solutions and we provide
-              onging consultating on site and over the phone to achieve this goal.</p>
+              just end there though we want our customers to succeed and benefit from our solutions and we provide
+              ongoing consulating on site and over the phone to achieve this goal.</p>
           </div>
           <div class="col-md-6 mb-4 mb-md-0 px-3">
             <img src="img/Support.png" class="img-fluid shadow-2-strong" />
@@ -117,10 +117,7 @@
             <div class="card card-article my-5">
               <div class="row">
                 <div class="col-lg-5 bg-image hover-zoom ">
-                  <img href="Payments.html" src="img/Cloud.jpg" class="card-img" />
-                  <a href="Payments.html">
-                    <div class="mask" style="background-color: rgba(251, 251, 251, 0.15)"></div>
-                  </a>
+                  <img src="img/Cloud.jpg" class="card-img" />
                 </div>
                 <div class="col-lg-7 card-body p-md-5 align-self-center">
                   <h4 class="card-title">Cloud-Hybrid POS</h4>
@@ -136,17 +133,14 @@
             <div class="card card-article my-5">
               <div class="row">
                 <div class="order-lg-2 col-lg-5 bg-image hover-zoom ">
-                  <img href="Payments.html" src="img/Support.png" class="img-fluid card-img" />
-                  <a href="Payments.html">
-                    <div class="mask" style="background-color: rgba(251, 251, 251, 0.15)"></div>
-                  </a>
+                  <img src="img/Support.png" class="img-fluid card-img" />
                 </div>
                 <div class="order-lg-1 col-lg-7 card-body p-md-5 align-self-center">
                   <h4 class="card-title">Hands on support</h4>
                   <p class="card-text">We go the extra mile by providing, 24/7 phone support, on-site support and consulting. During installation
                     we work with management to train staff for a smooth transition to our point of sales solutions. It doesn't
-                    just end there though we want our customers to suceeed and benifit from our solutions and we provide
-                    onging consultating on site and over the phone to achieve this goal.</p>
+                    just end there though we want our customers to succeed and benefit from our solutions and we provide
+                    ongoing consulating on site and over the phone to achieve this goal.</p>
                 </div>
               </div>
             </div>
@@ -185,7 +179,7 @@
             </div>
             <h5 class="mb-3">Inventory</h5>
             <p class="mb-4">
-              Receive inventory, make new orders directly, and build recipies that auto deplete your stock. It's all
+              Receive inventory, make new orders directly, and build recipes that auto deplete your stock. It's all
               available. </p>
           </div>
           <div class="col-md-4 mb-4">
@@ -198,7 +192,7 @@
             </div>
             <h5 class="mb-3">Scheduling</h5>
             <p class="mb-4">
-              Need to take a sick day? Swapping shifts is a brieze with our mobile app for employees and managers. </p>
+              Need to take a sick day? Swapping shifts is a breeze with our mobile app for employees and managers. </p>
           </div>
         </div>
       </div>
