--- a/Payments.html
+++ b/Payments.html
@@ -65,7 +65,7 @@
         <div class="row vh-50">
           <div class="col-sm-12 col-md-5 align-self-center">
             <h1 class="jumbotron-heading text-white">Payment Solutions</h1>
-            <p class="text-white-50">Midland delivers the latest in payment technology, enabeling retailers and restaurants to accept more payments at an affordable rate.</p>
+            <p class="text-white-50">Midland delivers the latest in payment technology, enabling retailers and restaurants to accept more payments at an affordable rate.</p>
           </div>
         </div>
       </div>
@@ -82,9 +82,9 @@
           <div class="col-md-6 align-self-center">
             <h3 class="mb-3">Truly Secure Payments</h3>
             <p class="mb-4">
-              Rest easy with confidence that your payments are being processed securly.
+              Rest easy with confidence that your payments are being processed securely.
               At Midland, we work hard to ensure our customers meet the highest compliance standards. 
-              In addition to monitoring each of our acconts for complinace we provide our customers 
+              In addition to monitoring each of our accounts for compliance we provide our customers 
               with only the most secure payment equipment. Start processing securely today!
             </p>
           </div>
@@ -106,7 +106,7 @@
             </div>
             <h5 class="mb-3">Terminal</h5>
             <p class="mb-4">
-            &nbsp; Counter top terminals are a great start for accepting payments. Our terminals take chip as well as NFC tap transactions.&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; </p>
+            &nbsp; Counter top terminals are a great start for accepting payments. Our terminals take chip as well as NFC tap transactions.</p>
           </div>
           <div class="col-md-4 mb-4">
             <div class="bg-image hover-zoom mb-4 shadow-1-strong rounded">
@@ -114,7 +114,7 @@
             </div>
             <h5 class="mb-3">Point of Sale</h5>
             <p class="mb-4">
-            Manage business operations like inventory payroll etc. while taking secure payments.&nbsp;&nbsp; </p>
+            Manage business operations like inventory payroll etc. while taking secure payments.</p>
           </div>
           <div class="col-md-4 mb-4">
             <div class="bg-image hover-zoom mb-4 shadow-1-strong rounded">
@@ -122,7 +122,7 @@
             </div>
             <h5 class="mb-3">Mobile</h5>
             <p class="mb-4">
-            Accept payment form anywere with Midlands mobile phone chipper attachement.&nbsp;&nbsp; </p>
+            Accept payment form anywhere with Midlands mobile phone chipper attachment.</p>
           </div>
         </div>
       </div>
