--- a/index.html
+++ b/index.html
@@ -76,12 +76,9 @@
               </div>
               <div class="row">
                 <div class="col-md-5 col-lg-5 pb-3 px-5 px-md-3">
-                  <p class="Jumbotron-sub-heading">
-                    helping businesses thrive and keep more of their money.
-                  </p>
                   <div class="pt-5 pb-3">
                     <a href="About.html">
-                      <button type="button" class="btn btn-warning btn-rounded">Call Now</button>
+                      <button type="button" class="btn btn-warning btn-rounded me-sm-3">Call Now</button>
                     </a>
                     <a href="Payments.html">
                       <button type="button" class="btn btn-outline-light btn-rounded">More Info</button>
@@ -96,13 +93,12 @@
     </section>
 
     <section class="services slant-container shadow-3">
-      <div class="my-5">
         <section class="unslant-content call-to-action">
           <div class="container text-center">
             <h1 class="section-heading">Services</h1>
             <p class="py-3 px-5">
-              Midland provides businesses across the north east with afordable payment processing, small business loans,
-              and inovative POS technology.
+              Midland provides businesses across the north east with affordable payment processing, small business loans,
+              and innovative POS technology.
               We offer you the tools to run your business with efficiency while keeping more of your money!
             </p>
           </div>
@@ -121,9 +117,9 @@
                   </div>
                   <div class="card-body">
                     <h4 class="card-title">Payments</h4>
-                    <div class="card-footer px-0 pt-3">
+                    <div class="card-footer px-0 pt-4">
                       <a href="Payments.html">
-                        <button type="button" class="btn btn-primary font-weight-bold">Take Payments <i
+                        <button type="button" class="btn btn-warning font-weight-bold">Take Payments <i
                             class="fa fa-angle-right px-2"></i></button>
                       </a>
                     </div>
@@ -140,9 +136,9 @@
                   </div>
                   <div class="card-body">
                     <h4 class="card-title">Point of Sale</h4>
-                    <div class="card-footer px-0 pt-3">
+                    <div class="card-footer px-0 pt-4">
                       <a href="POS.html">
-                        <button type="button" class="btn btn-primary font-weight-bold">Stay on Point <i
+                        <button type="button" class="btn btn-warning font-weight-bold">Stay on Point <i
                             class="fa fa-angle-right px-2"></i></button>
                       </a>
                     </div>
@@ -159,9 +155,9 @@
                   </div>
                   <div class="card-body">
                     <h4 class="card-title">Business Loans</h4>
-                    <div class="card-footer px-0 pt-3">
+                    <div class="card-footer px-0 pt-4">
                       <a href="Loans.html">
-                        <button type="button" class="btn btn-primary font-weight-bold">Get Relief <i
+                        <button type="button" class="btn btn-warning font-weight-bold">Get Relief <i
                             class="fa fa-angle-right px-2"></i></button>
                       </a>
                     </div>
@@ -171,43 +167,72 @@
             </div>
           </div>
         </section>
-      </div>
     </section>
 
-    <section class="pos-artical">
-      <div class="container vertical-center vh-125">
+    <section class="pos-btm-article">
+      <div class="vh-25"></div>
+      <div class="container vertical-center vh-75 my-5">
         <div class="row mb-5">
           <div class="col-md-6 mb-4 mb-md-0">
-            <img src="img/PP1365-Side-3.png" class="img-fluid pos-img" />
+            <img src="img/POSCollageShadow.png" class="img-fluid pos-img" />
           </div>
           <div class="col-md-6 align-self-center">
-            <h3 class="mb-3">Stay on Top with the Latest in POS technology</h3>
+            <h3 class="mb-3">Stay on Top with the Latest Tech</h3>
             <p class="mb-4">
-              Midland has close partnerships with industiry leaders at the forfront of point of sale technology. We
-              work closly with managers to implement efficient solutions in retail, bar, restaurnt, and QSR.
+              Midland has close partnerships with industry leaders at the forefront of point of sale technology. We
+              work closely with managers to implement efficient solutions in retail, bar, restaurant, and QSR.
             </p>
             <div class="row py-4 pos-features">
               <div class="col-6">
                 <ul class="fa-ul mb-0">
                   <li class="mb-2 py-2"><span class="fa-li"><i class="fas fa-mobile-alt"></i></span>Online Ordering</li>
-                  <li class="mb-2 py-2"><span class="fa-li"><i class="fas fa-user-clock"></i></span>Employee Payroll
-                  </li>
+                  <li class="mb-2 py-2"><span class="fa-li"><i class="fas fa-user-clock"></i></span>Employee Payroll</li>               
+                  <li class="mb-2 py-2"><span class="fa-li"><i class="fas fa-qrcode"></i></span>Pay at the Table</li>
                 </ul>
               </div>
               <div class="col-6">
                 <ul class="fa-ul mb-0">
-                  <li class="mb-2 py-2"><span class="fa-li"><i class="fas fa-calendar-alt"></i></span>Employee
-                    Scheduling</li>
-                  <li class="mb-2 py-2"><span class="fa-li"><i class="fas fa-boxes"></i></span>Inventory Managment</li>
+                  <li class="mb-2 py-2"><span class="fa-li"><i class="fas fa-calendar-alt"></i></span>Employee Scheduling</li>
+                  <li class="mb-2 py-2"><span class="fa-li"><i class="fas fa-boxes"></i></span>Liquor Inventory</li>
+                  <li class="mb-2 py-2"><span class="fa-li"><i class="fas fa-car-side"></i></span>Delivery</li>
                 </ul>
               </div>
             </div>
           </div>
         </div>
       </div>
+      <div class="container vertical-center vh-75 my-5">
+        <div class="row mb-5">
+          <div class="col-md-6 align-self-center">
+            <h3 class="mb-3">Offer Bitcoin. Generate passive income.</h3>
+            <p class="mb-4">
+              Take advantage of the growing demand for Bitcoin by offering it in your store!
+            </p>
+            <div class="row py-4 pos-features mt-5">
+              <div class="col-6">
+                <h4>The Ask</h4>
+                <ul class="mb-0">
+                  <li class="mb-2 py-2">1 square foot of space in your store near an 
+                    electrical outlet</li>
+                </ul>
+              </div>
+              <div class="col-6">
+                <h4>Whats in it for you?</h4>
+                <ul class="mb-0">
+                  <li class="mb-2 py-2">We pay you to rent the space</li>
+                  <li class="mb-2 py-2">Free marketing for your business</li>
+                  <li class="mb-2 py-2">5-10% increase in foot traffic</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 mb-4 mb-md-0">
+            <img src="img/BTMLogo.png" class="img-fluid pos-img" />
+          </div>
+        </div>
+      </div>
+      <div class="vh-25"></div>
     </section>
-
-
 
     <section class="quote slant-container shadow-3-strong">
       <div class="unslant-content container vertical-center">
