--- a/About.html
+++ b/About.html
@@ -27,7 +27,7 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg fixed-top navbar-scroll">
+    <nav class="navbar navbar-expand-lg fixed-top navbar-scrolled">
       <div class="container">
         <a href="index.html" class="navbar-brand logo">MIDLAND</a>
 
@@ -61,54 +61,95 @@
 
   <main role="main">
 
-    <!--Section: Design Block-->
-    <section class="text-center py-5">
+
+
+    <section class="about">
       <div class="container my-5">
-
-        <h3 class="mb-3">Tell us about your Business!</h3>
-        <p>We will reply to your message as soon as possible. The average response time is 24h.</p>
-
-        <br class="my-4">
-
-        <div class="row d-flex justify-content-center pt-2">
-
-          <div class="col-md-6 mb-4">
-
-            <form>
-              <!-- Name input -->
-              <div class="form-outline mb-4">
-                <input type="text" id="form4Example1" class="form-control" />
-                <label class="form-label" for="form4Example1">Name</label>
+        <div class="blog-post">
+          <div class="row">
+            <div class="col-auto">
+              <img class="img-fluid rounded-circle m-4 shadow-3-strong" src="img/CEO.jpg"
+                style="width: 150px; height: 150px; background-color: grey" />
+            </div>
+            <div class="col vertical-center">
+              <div class="container">
+                <h2 class="blog-post-title">About Midland</h2>
+                <p class="blog-post-meta">February 23, 2021 by <a href="#">Konstantinos G Prentzas</a></p>
               </div>
-
-              <!-- Email input -->
-              <div class="form-outline mb-4">
-                <input type="email" id="form4Example2" class="form-control" />
-                <label class="form-label" for="form4Example2">Email address</label>
-              </div>
-
-              <!-- Message input -->
-              <div class="form-outline mb-4">
-                <textarea class="form-control" id="form4Example3" rows="4"></textarea>
-                <label class="form-label" for="form4Example3">Message</label>
-              </div>
-
-              <!-- Checkbox -->
-              <div class="form-check d-flex justify-content-center mb-4">
-                <input class="form-check-input me-2" type="checkbox" value="" id="form4Example4" checked />
-                <label class="form-check-label" for="form4Example4">
-                  Send me a copy of this message
-                </label>
-              </div>
-
-              <!-- Submit button -->
-              <button type="submit" class="btn btn-primary btn-block">
-                Send
-              </button>
-            </form>
-
+            </div>
           </div>
 
+          <p>Cum sociis natoque penatibus et magnis <a href="#">dis parturient montes</a>, nascetur ridiculus mus.
+            Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est
+            at lobortis. Cras mattis consectetur purus sit amet fermentum.</p>
+          <blockquote>
+            <p>Curabitur blandit tempus porttitor. <strong>Nullam quis risus eget urna mollis</strong> ornare vel eu
+              leo. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+          </blockquote>
+          <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum.
+            Aenean lacinia bibendum nulla sed consectetur.</p>
+          <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Duis mollis, est non commodo luctus,
+            nisi erat porttitor ligula, eget lacinia odio sem nec elit. Morbi leo risus, porta ac consectetur ac,
+            vestibulum at eros.</p>
+        </div>
+    </section>
+
+    <section class="vect-map">
+      <div class="container p-5 text-center">
+        <img style="max-width: 90%;" src="img/VecMap.png" alt="">
+      </div>
+    </section>
+    
+    <div class="vh-25"></div>
+
+    <section class="customerinfoform slant-container">
+      <div class="container">
+        <div class="unslant-content text-center m-5 card card-rounded p-5 shadow-3-strong">
+
+          <h3 class="mb-3">Tell us about your Business!</h3>
+          <p>We will reply to your message as soon as possible. The average response time is 24h.</p>
+
+          <br class="my-4">
+
+          <div class="row d-flex justify-content-center pt-2">
+
+            <div class="col-md-6 mb-4">
+
+              <form>
+                <!-- Name input -->
+                <div class="form-outline mb-4">
+                  <input type="text" id="form4Example1" class="form-control" />
+                  <label class="form-label" for="form4Example1">Name</label>
+                </div>
+
+                <!-- Email input -->
+                <div class="form-outline mb-4">
+                  <input type="email" id="form4Example2" class="form-control" />
+                  <label class="form-label" for="form4Example2">Email address</label>
+                </div>
+
+                <!-- Message input -->
+                <div class="form-outline mb-4">
+                  <textarea class="form-control" id="form4Example3" rows="4"></textarea>
+                  <label class="form-label" for="form4Example3">Message</label>
+                </div>
+
+                <!-- Checkbox -->
+                <div class="form-check d-flex justify-content-center mb-4">
+                  <input class="form-check-input me-2" type="checkbox" value="" id="form4Example4" checked />
+                  <label class="form-check-label" for="form4Example4">
+                    Send me a copy of this message
+                  </label>
+                </div>
+
+                <!-- Submit button -->
+                <button type="submit" class="btn btn-primary btn-block">
+                  Send
+                </button>
+              </form>
+
+            </div>
+          </div>
         </div>
 
       </div>
