--- a/About.html
+++ b/About.html
@@ -104,7 +104,7 @@
 
     <section class="customerinfoform slant-container">
       <div class="container">
-        <div class="unslant-content text-center m-5 card card-rounded p-5 shadow-3-strong">
+        <div class="unslant-content text-center m-md-5 card card-rounded p-5 shadow-3-strong">
 
           <h3 class="mb-3">Tell us about your Business!</h3>
           <p>We will reply to your message as soon as possible. The average response time is 24h.</p>
