--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
       </div>
       <div class="container vertical-center vh-75 my-5">
         <div class="row mb-5">
-          <div class="col-md-6 align-self-center">
+          <div class="order-sm-2 order-md-1 col-md-6 align-self-center">
             <h3 class="mb-3">Offer Bitcoin. Generate passive income.</h3>
             <p class="mb-4">
               Take advantage of the growing demand for Bitcoin by offering it in your store!
@@ -226,7 +226,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 mb-4 mb-md-0">
+          <div class="order-sm-1 order-md-2 col-md-6 mb-4 mb-md-0">
             <img src="img/BTMLogo.png" class="img-fluid pos-img" />
           </div>
         </div>
