--- a/POS.html
+++ b/POS.html
@@ -124,7 +124,7 @@
                   <p class="card-text">Take advantage of the cloud to manage your business no matter where you are in the
                     world. Access reporting
                     data adjust employee privileges, make menu adjustment etc.. All of this is possible while the hybrid
-                    nature means better security and the ability to manage form a familiar desktop application.</p>
+                    nature means better security and the ability to manage from a familiar desktop application.</p>
                 </div>
               </div>
             </div>
@@ -166,7 +166,7 @@
             </div>
             <h5 class="mb-3">Online Ordering</h5>
             <p class="mb-4">
-              Start taking online orders directly through you pos without any extra setup. Accept orders and print
+              Start taking online orders directly through your pos without any extra setup. Accept orders and print
               directly to the kitchen!</p>
           </div>
           <div class="col-md-4 mb-4">
