--- a/index.html
+++ b/index.html
@@ -173,11 +173,11 @@
       <div class="vh-25"></div>
       <div class="container vertical-center vh-75 my-5">
         <div class="row mb-5">
-          <div class="col-md-6 mb-4 mb-md-0">
+          <div class="col-md-6 mb-4 mb-md-0 align-self-center">
             <img src="img/POSCollageShadow.png" class="img-fluid pos-img" />
           </div>
           <div class="col-md-6 align-self-center">
-            <h3 class="mb-3">Stay on Top with the Latest Tech</h3>
+            <h3 class="mb-3">The Latest Point of Sale</h3>
             <p class="mb-4">
               Midland has close partnerships with industry leaders at the forefront of point of sale technology. We
               work closely with managers to implement efficient solutions in retail, bar, restaurant, and QSR.
@@ -197,17 +197,18 @@
                   <li class="mb-2 py-2"><span class="fa-li"><i class="fas fa-car-side"></i></span>Delivery</li>
                 </ul>
               </div>
+              <div class="col-12 mt-5"><a href="Payments.html" class="inherit-style"><h5>Learn More...</h5></a></div>
             </div>
           </div>
         </div>
       </div>
       <div class="container vertical-center vh-75 my-5">
         <div class="row mb-5">
-          <div class="order-md-2 col-md-6 mb-4 mb-md-0">
+          <div class="order-md-2 col-md-6 mb-4 mb-md-0 align-self-center">
             <img src="img/BTMLogo.png" class="img-fluid pos-img" />
           </div>
           <div class="order-md-1 col-md-6 align-self-center">
-            <h3 class="mb-3">Offer Bitcoin. Generate passive income.</h3>
+            <h3 class="mb-3">Generate passive income. Offer Bitcoin.</h3>
             <p class="mb-4">
               Take advantage of the growing demand for Bitcoin by offering it in your store!
             </p>
@@ -255,16 +256,16 @@
       <div class="container pt-5">
         <div class="row p-3 pt-5">
           <div class="p-3 p-md-5 col-lg-3 col-6">
-            <img src="img/yachtclub.png" class="customer-logo img-fluid" alt="Logo" />
+            <a href="https://www.yachtclubnj.com/"><img src="img/yachtclub.png" class="customer-logo img-fluid" alt="Logo" /></a>
           </div>
           <div class="p-3 p-md-5 col-lg-3 col-6">
-            <img src="img/shalel.png" class="customer-logo img-fluid" alt="Logo" />
+            <a href="https://shalel.kitchen/"><img src="img/shalel.png" class="customer-logo img-fluid" alt="Logo" /></a>
           </div>
           <div class="p-3 p-md-5 col-lg-3 col-6">
-            <img src="img/tru.png" class="customer-logo img-fluid" alt="Logo" />
+            <a href="https://truastoria.com/"><img src="img/tru.png" class="customer-logo img-fluid" alt="Logo" /></a>
           </div>
           <div class="p-3 p-md-5 col-lg-3 col-6">
-            <img src="img/yachtclub.png" class="customer-logo img-fluid" alt="Logo" />
+            <a href="https://salspizzawilliamsburg.com/"><img src="img/Sals.png" class="customer-logo img-fluid" alt="Logo" /></a>
           </div>
         </div>
       </div>
