--- a/Loans.html
+++ b/Loans.html
@@ -138,6 +138,61 @@
       </div>
     </section> -->
 
+    <hr class="text-white my-5">
+
+    <section class="customerinfoform slant-container">
+      <div class="container">
+        <div class="unslant-content text-center m-md-5 card card-rounded p-5 shadow-3-strong">
+
+          <h3 class="mb-3">Let's Get Started!</h3>
+          <p>We will reply to your message as soon as possible. The average response time is 24h.</p>
+
+          <br class="my-4">
+
+          <div class="row d-flex justify-content-center pt-2">
+
+            <div class="col-md-6 mb-4">
+
+              <form>
+                <!-- Name input -->
+                <div class="form-outline mb-4">
+                  <input type="text" id="form4Example1" class="form-control" />
+                  <label class="form-label" for="form4Example1">Name</label>
+                </div>
+
+                <!-- Email input -->
+                <div class="form-outline mb-4">
+                  <input type="email" id="form4Example2" class="form-control" />
+                  <label class="form-label" for="form4Example2">Email address</label>
+                </div>
+
+                <!-- Message input -->
+                <div class="form-outline mb-4">
+                  <textarea class="form-control" id="form4Example3" rows="4"></textarea>
+                  <label class="form-label" for="form4Example3">Message</label>
+                </div>
+
+                <!-- Checkbox -->
+                <div class="form-check d-flex justify-content-center mb-4">
+                  <input class="form-check-input me-2" type="checkbox" value="" id="form4Example4" checked />
+                  <label class="form-check-label" for="form4Example4">
+                    Send me a copy of this message
+                  </label>
+                </div>
+
+                <!-- Submit button -->
+                <button type="submit" class="btn btn-primary btn-block">
+                  Send
+                </button>
+              </form>
+
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
   </main>
 
   <footer class="footer">
