--- a/About.html
+++ b/About.html
@@ -79,18 +79,13 @@
             </div>
           </div>
 
-          <p>Cum sociis natoque penatibus et magnis <a href="#">dis parturient montes</a>, nascetur ridiculus mus.
-            Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est
-            at lobortis. Cras mattis consectetur purus sit amet fermentum.</p>
-          <blockquote>
-            <p>Curabitur blandit tempus porttitor. <strong>Nullam quis risus eget urna mollis</strong> ornare vel eu
-              leo. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-          </blockquote>
-          <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum.
-            Aenean lacinia bibendum nulla sed consectetur.</p>
-          <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Duis mollis, est non commodo luctus,
-            nisi erat porttitor ligula, eget lacinia odio sem nec elit. Morbi leo risus, porta ac consectetur ac,
-            vestibulum at eros.</p>
+          <p>Midland Payment Services is the evolution of a company that started over 16 years ago with a strong desire to
+            offer a higher level of integrity and customer service in an industry that lacks transparency. Midland has 15 sales offices and services thousands of merchants nationwide. In addition, the
+            company maintains an excellent rating with the Better Business Bureau online and has become a leading
+            payment processing company.</p>
+
+          <p>Midland prides itself as one of the fastest growing processing companies and will continue
+            this growth through our commitment to providing cutting edge technology to our merchants. The corporate office, customer service, and technical support are located in New York.</p>
         </div>
     </section>
 
@@ -99,7 +94,7 @@
         <img style="max-width: 90%;" src="img/VecMap.png" alt="">
       </div>
     </section>
-    
+
     <div class="vh-25"></div>
 
     <section class="customerinfoform slant-container">
