--- a/Payments.html
+++ b/Payments.html
@@ -105,8 +105,7 @@
               class="img-fluid" />
             </div>
             <h5 class="mb-3">Terminal</h5>
-            <p class="mb-4">
-            &nbsp; Counter top terminals are a great start for accepting payments. Our terminals take chip as well as NFC tap transactions.</p>
+            <p class="mb-4">Counter top terminals are a great start for accepting payments. Our terminals take chip as well as NFC tap transactions.</p>
           </div>
           <div class="col-md-4 mb-4">
             <div class="bg-image hover-zoom mb-4 shadow-1-strong rounded">
