--- a/About.html
+++ b/About.html
@@ -79,10 +79,8 @@
             </div>
           </div>
 
-          <p>Midland Payment Services is the evolution of a company that started over 16 years ago with a strong desire to
-            offer a higher level of integrity and customer service in an industry that lacks transparency. Midland has 15 sales offices and services thousands of merchants nationwide. In addition, the
-            company maintains an excellent rating with the Better Business Bureau online and has become a leading
-            payment processing company.</p>
+          <p>Midland Payment Services is the evolution of a company with over 15 years of experience and a strong desire to
+            offer a higher level of integrity and customer service in an industry that lacks transparency. Midland has 15 sales offices and services thousands of merchants nationwide.</p>
 
           <p>Midland prides itself as one of the fastest growing processing companies and will continue
             this growth through our commitment to providing cutting edge technology to our merchants. The corporate office, customer service, and technical support are located in New York.</p>
