--- a/About.html
+++ b/About.html
@@ -29,7 +29,7 @@
   <header>
     <nav class="navbar navbar-expand-lg fixed-top navbar-scrolled">
       <div class="container">
-        <a href="index.html" class="navbar-brand logo">MIDLAND</a>
+        <a href="home" class="navbar-brand logo">MIDLAND</a>
 
         <button class="navbar-toggler ps-0" type="button" data-mdb-toggle="collapse"
           data-mdb-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
