fixed routing names fds@a
;w
:w
:q

:wq

:wq

ii

--- a/Payments.html
+++ b/Payments.html
@@ -40,16 +40,16 @@
         <div id="navbarSupportedContent" class="collapse navbar-collapse text-center">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item mx-3">
-              <a href="Payments.html" class="nav-link text-uppercase font-weight-bold">Payments</a>
+              <a href="payments" class="nav-link text-uppercase font-weight-bold">Payments</a>
             </li>
             <li class="nav-item mx-3">
-              <a href="Loans.html" class="nav-link text-uppercase font-weight-bold">Loans</a>
+              <a href="loans" class="nav-link text-uppercase font-weight-bold">Loans</a>
             </li>
             <li class="nav-item mx-3">
-              <a href="POS.html" class="nav-link text-uppercase font-weight-bold">POS</a>
+              <a href="pos" class="nav-link text-uppercase font-weight-bold">POS</a>
             </li>
             <li class="nav-item mx-3">
-              <a href="About.html">
+              <a href="about">
                 <button type="button" class="btn btn-warning rounded-pill">Contact</button>
               </a>
             </li>
@@ -191,22 +191,22 @@
           <small class="d-block mb-3 text-muted">© 2020-2021</small>
         </div>
         <div class="col-6 col-md">
-          <a href="Payments.html" class="inherit-style">
+          <a href="payments" class="inherit-style">
             <h5>Payments</h5>
           </a>
         </div>
         <div class="col-6 col-md">
-          <a href="POS.html" class="inherit-style">
+          <a href="pos" class="inherit-style">
             <h5>Point of Sale</h5>
           </a>
         </div>
         <div class="col-6 col-md">
-          <a href="Loans.html" class="inherit-style">
+          <a href="loans" class="inherit-style">
             <h5>Loans</h5>
           </a>
         </div>
         <div class="col-6 col-md">
-          <a href="About.html" class="inherit-style">
+          <a href="about" class="inherit-style">
             <h5>About</h5>
           </a>
         </div>
