--- a/home.html
+++ b/home.html
@@ -44,16 +44,16 @@
         <div id="navbarSupportedContent" class="collapse navbar-collapse text-center">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item mx-3">
-              <a href="Payments.html" class="nav-link text-uppercase font-weight-bold">Payments</a>
+              <a href="payments" class="nav-link text-uppercase font-weight-bold">Payments</a>
             </li>
             <li class="nav-item mx-3">
-              <a href="Loans.html" class="nav-link text-uppercase font-weight-bold">Loans</a>
+              <a href="loans" class="nav-link text-uppercase font-weight-bold">Loans</a>
             </li>
             <li class="nav-item mx-3">
-              <a href="POS.html" class="nav-link text-uppercase font-weight-bold">POS</a>
+              <a href="pos" class="nav-link text-uppercase font-weight-bold">POS</a>
             </li>
             <li class="nav-item mx-3">
-              <a href="About.html">
+              <a href="about">
                 <button type="button" class="btn btn-warning rounded-pill">Contact</button>
               </a>
             </li>
@@ -77,10 +77,10 @@
               <div class="row">
                 <div class="col-md-5 col-lg-5 pb-3 px-5 px-md-3">
                   <div class="pt-5 pb-3">
-                    <a href="About.html">
+                    <a href="about">
                       <button type="button" class="btn btn-warning btn-rounded me-sm-3">Call Now</button>
                     </a>
-                    <a href="Payments.html">
+                    <a href="payments">
                       <button type="button" class="btn btn-outline-light btn-rounded">More Info</button>
                     </a>
                   </div>
@@ -110,15 +110,15 @@
               <div class="unslant-content col-md-4 p-4 p-lg-5 align-self-center">
                 <div class="card card-rounded m-3">
                   <div class=" bg-image hover-zoom hover-overlay ripple" data-mdb-ripple-color="light">
-                    <img href="Payments.html" src="img/AdobeStock_236122441.jpeg" class="img-fluid" />
-                    <a href="Payments.html">
+                    <img href="payments" src="img/AdobeStock_236122441.jpeg" class="img-fluid" />
+                    <a href="payments">
                       <div class="mask" style="background-color: rgba(251, 251, 251, 0.15)"></div>
                     </a>
                   </div>
                   <div class="card-body">
                     <h4 class="card-title">Payments</h4>
                     <div class="card-footer px-0 pt-4">
-                      <a href="Payments.html">
+                      <a href="payments">
                         <button type="button" class="btn btn-warning font-weight-bold">Take Payments <i
                             class="fa fa-angle-right px-2"></i></button>
                       </a>
@@ -129,15 +129,15 @@
               <div class="unslant-content col-md-4 p-4 p-lg-5 align-self-center">
                 <div class="card card-rounded m-3">
                   <div class="bg-image hover-zoom hover-overlay ripple" data-mdb-ripple-color="light">
-                    <img href="POS.html" src="img/AdobeStock_231243182.jpeg" class="img-fluid" />
-                    <a href="POS.html">
+                    <img href="pos" src="img/AdobeStock_231243182.jpeg" class="img-fluid" />
+                    <a href="pos">
                       <div class="mask" style="background-color: rgba(251, 251, 251, 0.15)"></div>
                     </a>
                   </div>
                   <div class="card-body">
                     <h4 class="card-title">Point of Sale</h4>
                     <div class="card-footer px-0 pt-4">
-                      <a href="POS.html">
+                      <a href="pos">
                         <button type="button" class="btn btn-warning font-weight-bold">Stay on Point <i
                             class="fa fa-angle-right px-2"></i></button>
                       </a>
@@ -148,15 +148,15 @@
               <div class="unslant-content col-md-4 p-4 p-lg-5 align-self-center">
                 <div class="card card-rounded m-3">
                   <div class="bg-image hover-zoom hover-overlay ripple" data-mdb-ripple-color="light">
-                    <img href="Loans.html" src="img/AdobeStock_170520365.jpeg" class="img-fluid" />
-                    <a href="Loans.html">
+                    <img href="loans" src="img/AdobeStock_170520365.jpeg" class="img-fluid" />
+                    <a href="loans">
                       <div class="mask" style="background-color: rgba(251, 251, 251, 0.15)"></div>
                     </a>
                   </div>
                   <div class="card-body">
                     <h4 class="card-title">Business Loans</h4>
                     <div class="card-footer px-0 pt-4">
-                      <a href="Loans.html">
+                      <a href="loans">
                         <button type="button" class="btn btn-warning font-weight-bold">Get Relief <i
                             class="fa fa-angle-right px-2"></i></button>
                       </a>
@@ -197,7 +197,7 @@
                   <li class="mb-2 py-2"><span class="fa-li"><i class="fas fa-car-side"></i></span>Delivery</li>
                 </ul>
               </div>
-              <div class="col-12 mt-5"><a href="Payments.html" class="inherit-style"><h5>Learn More...</h5></a></div>
+              <div class="col-12 mt-5"><a href="payments" class="inherit-style"><h5>Learn More...</h5></a></div>
             </div>
           </div>
         </div>
@@ -280,22 +280,22 @@
           <small class="d-block mb-3 text-muted">© Copyright Midland Payment Services. All Rights Reserved</small>
         </div>
         <div class="col-6 col-md">
-          <a href="Payments.html" class="inherit-style">
+          <a href="payments" class="inherit-style">
             <h5>Payments</h5>
           </a>
         </div>
         <div class="col-6 col-md">
-          <a href="POS.html" class="inherit-style">
+          <a href="pos" class="inherit-style">
             <h5>Point of Sale</h5>
           </a>
         </div>
         <div class="col-6 col-md">
-          <a href="Loans.html" class="inherit-style">
+          <a href="loans" class="inherit-style">
             <h5>Loans</h5>
           </a>
         </div>
         <div class="col-6 col-md">
-          <a href="About.html" class="inherit-style">
+          <a href="about" class="inherit-style">
             <h5>About</h5>
           </a>
         </div>
