--- a/home.html
+++ b/home.html
@@ -243,8 +243,8 @@
               style="width: 150px; height: 150px; background-color: grey" />
           </div>
           <div class="vertical-center col-lg">
-            <h1 class="blockquote">A successful relationship can only be sustained with honesty, integrity and complete
-              transparency.
+            <h1 class="blockquote">"A successful relationship can only be sustained with honesty, integrity and complete
+              transparency."
               <p class="blockquote-cite">President of Midland Payments</p>
             </h1>
           </div>
