--- a/loans.html
+++ b/loans.html
@@ -244,6 +244,6 @@
 <!-- MDB -->
 <script type="text/javascript" src="js/mdb.min.js"></script>
 <!-- Custom scripts -->
-<script type="text/javascript"></script>
+<script type="text/javascript" src="js/index.js"></script>
 
 </html>
