direct code snippet

--- a/about.html
+++ b/about.html
@@ -194,10 +194,17 @@
       </div>
     </div>
   </footer>
+  <script>
+    window.onbeforeunload = () => {
+    for(const form of document.getElementsByTagName('form')) {
+      form.reset();
+    }
+  }
+  </script>
 </body>
 
 <!-- MDB -->
 <!-- Custom scripts -->
-<script type="text/javascript" src="js/index.js"></script>
+<script type="text/javascript" language="javascript" src="js/index.js"></script>
 
 </html>
