scripts inside body

--- a/about.html
+++ b/about.html
@@ -194,17 +194,10 @@
       </div>
     </div>
   </footer>
-  <script>
-    window.onbeforeunload = () => {
-    for(const form of document.getElementsByTagName('form')) {
-      form.reset();
-    }
-  }
-  </script>
-</body>
-
 <!-- MDB -->
+<script type="text/javascript" src="js/mdb.min.js"></script>
 <!-- Custom scripts -->
-<script type="text/javascript" language="javascript" src="js/index.js"></script>
+<script type="text/javascript" language="javascript" src="js/index.js"></script> 
+</body>
 
 </html>
