--- a/about.html
+++ b/about.html
@@ -197,6 +197,8 @@
 
 <!-- Custom scripts -->
 <script type="text/javascript" language="javascript" src="js/index.js"></script> 
+<!-- MDB -->
+<script type="text/javascript" src="js/mdb.min.js"></script>
 </body>
 
 </html>
