--- a/about.html
+++ b/about.html
@@ -1,3 +1,35 @@
+<?php
+use PHPMailer\PHPMailer\PHPMailer;
+require 'vendor/autoload.php';
+    $mail = new PHPMailer;
+    $mail->isSMTP();
+    $mail->Host = 'smtp.hostinger.com';
+    $mail->Port = 587;
+    $mail->SMTPAuth = true;
+    $mail->Username = 'test@hostinger-tutorials.com';
+    $mail->Password = 'EMAIL_ACCOUNT_PASSWORD';
+    $mail->setFrom('test@hostinger-tutorials.com', 'Mr. Drago');
+    $mail->addAddress('example@gmail.com', 'Receiver Name');
+    if ($mail->addReplyTo($_POST['email'], $_POST['name'])) {
+        $mail->Subject = 'PHPMailer contact form';
+        $mail->isHTML(false);
+        $mail->Body = <<<EOT
+Email: {$_POST['email']}
+Name: {$_POST['name']}
+Message: {$_POST['message']}
+EOT;
+        if (!$mail->send()) {
+            $msg = 'Sorry, something went wrong. Please try again later.';
+        } else {
+            $msg = 'Message sent! Thanks for contacting us.';
+        }
+    } else {
+        $msg = 'Share it with us!';
+    }
+?>
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -110,7 +142,7 @@
 
             <div class="col-md-6 mb-4">
 
-              <form name="form" action="form.php" method="POST">
+              <form name="form" method="POST">
                 <h2>Contact us</h2>
 
                 <div class="form-outline mb-4">
@@ -136,10 +168,11 @@
                 <button id="custom-validation-button" type="submit" Value="Send" class="btn btn-primary btn-block mb-4">
                   Send
                 </button>
-                <!-- Status message -->
+
                 <?php if (!empty($msg)) {
                   echo "<h2>$msg</h2>";
                 } ?>
+
               </form>
 
             </div>
